feat: add new terraform for ec2 experiement

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,5 +35,12 @@
 		"cpus": 2,
 		"memory": "4gb",
 		"storage": "15gb"
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"GitHub.copilot"
+			]
+		}
 	}
 }
